
export class Node
{}

export class Text
{}

export class Element
{}
